--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="shortcut icon" href="./img/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="./img/apple-touch-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./img/favicon-16x16.png">
+    <link rel="manifest" href="./img/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
     <title>Repair Design Project</title>
     <meta name="description" content="">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/style.min.css">
     <script>document.documentElement.className = document.documentElement.className.replace('no-js', 'js');
 
     </script>
@@ -136,6 +141,6 @@
         </footer>
       </div>
     </div>
-    <script src="./js/index.js"></script>
+    <script src="./js/index.min.js"></script>
   </body>
 </html>
