--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="promo__content">
               <h1 class="promo__title">Turnkey Repair in the city of <span>Rostov-on-Don</span></h1>
               <p class="promo__lead">Get ready-made turnkey repairs on time with work time saving up to 45 days and 20% from cost of materials due to the organization of work</p>
-              <div class="btn__wrapper"><a class="btn promo__cost-btn" href="#">Calculate the cost</a><a class="btn  btn--light promo__submit-btn" href="#">Submit your application</a>
+              <div class="promo__btn-wrapper"><a class="btn promo__cost-btn" href="#">Calculate the cost</a><a class="btn  btn--light promo__submit-btn" href="#">Submit your application</a>
               </div>
             </div>
             <div class="promo__insta"><a class="promo__insta-link" href="https://instagram.com" target="_blank" rel="noreferrer noopener">Instagram</a></div>
