--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
                             <li class="slider__item"><img class="slider__image" src="./img/completed-projects-01.jpg" alt="Rostov-on-Don LCD admiral"></li>
                             <li class="slider__item"><img class="slider__image" src="./img/completed-projects-02.jpg" alt="Sochi Thieves"></li>
                           </ul>
+                          <button class="slider__btn slider__btn--previous"><span class="visually-hidden">Previous image</span></button>
                           <button class="slider__btn slider__btn--next"><span class="visually-hidden">Next image</span></button>
                         </div>
               </div>
